add utility functions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "potentiel-v2",
+  "name": "potentielle-v2",
   "version": "1.0.0",
   "description": "discord bot",
   "main": "index.js",
